Login page update
Functionality for Employee login update and logo updated - SK_12/1_10:35

--- a/TeamProject/TeamProject/MasterPage.Master
+++ b/TeamProject/TeamProject/MasterPage.Master
@@ -16,7 +16,7 @@
 
          <div id="header">
                 <div id="logo">
-                    <img src="fakelogo.jpg" />
+                    <img src="LonghornBankLogo.jpg" />
                 </div>
                 <div id ="links">
                     <div id="service">
